[package]
name = "deck_editor"
version = "0.1.0"
edition = "2021"

[dependencies.adw]
package = "libadwaita"
version = "0.4"
features = ["v1_3"]

[dependencies]
directories = "5.0"
env_logger = { version = "0.10", features = ["color"] }
log = "0.4"
once_cell = "1.17"
relm4 = { version = "0.6", features = ["libadwaita"] }
reqwest = { version = "0.11", features = ["blocking"] }
rusqlite = { version = "0.29", features = ["bundled"] }
